--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title></title>
   <meta name="author" content="Pipi">
   <meta name="description" content="Home Index Content">
-  <meta name="keywords" content="blog,developer,personal">
+  <meta name="keywords" content="blog,life clips,personal">
 
   <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content=""/>
