--- a/series/themes-guide/index.html
+++ b/series/themes-guide/index.html
@@ -11,7 +11,7 @@
   <title>Themes Guide | Pipi&#39;s Blog</title>
   <meta name="author" content="Pipi">
   <meta name="description" content="a series of posts about configuring and using Hugo themes">
-  <meta name="keywords" content="blog,developer,personal">
+  <meta name="keywords" content="blog,life clips,personal">
 
   <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Themes Guide"/>
