--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
   <title>404 Page not found | Pipi&#39;s Blog</title>
   <meta name="author" content="Pipi">
   <meta name="description" content="Pipi&#39;s Website!">
-  <meta name="keywords" content="blog,developer,personal">
+  <meta name="keywords" content="blog,life clips,personal">
 
   <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
