--- a/about pipi/index.html
+++ b/about pipi/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="zh-tw">
   <head>
-    <title>https://staylowkey888.github.io/about/</title>
-    <link rel="canonical" href="https://staylowkey888.github.io/about/">
+    <title>https://stalowkey888.github.io/about/</title>
+    <link rel="canonical" href="https://stalowkey888.github.io/about/">
     <meta name="robots" content="noindex">
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=https://staylowkey888.github.io/about/">
+    <meta http-equiv="refresh" content="0; url=https://stalowkey888.github.io/about/">
   </head>
 </html>
