--- a/series/themes-guide/index.html
+++ b/series/themes-guide/index.html
@@ -20,7 +20,7 @@
   <meta property="og:title" content="Themes Guide" />
 <meta property="og:description" content="a series of posts about configuring and using Hugo themes" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://staylowkey888.github.io/series/themes-guide/" />
+<meta property="og:url" content="https://stalowkey888.github.io/series/themes-guide/" />
 
   <link rel="stylesheet" href="/css/bootstrap.min.css"  crossorigin="anonymous">
   
@@ -67,7 +67,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="https://staylowkey888.github.io">Pipi&#39;s Blog</a>
+      <a class="navbar-brand" href="https://stalowkey888.github.io">Pipi&#39;s Blog</a>
     </div>
     
     <div id="huxblog_navbar">
