racoon and health

--- a/404.html
+++ b/404.html
@@ -8,17 +8,17 @@
 
   
     
-  <title>404 Page not found | Pipi&#39;s World</title>
-  <meta name="author" content="Pipi">
-  <meta name="description" content="La vie est belle! Profitez bien!">
+  <title>404 Page not found | Racoon&#39;s World</title>
+  <meta name="author" content="Racoon">
+  <meta name="description" content="La vie est belle! Profitez bien!Let&#39;s think outside the box!">
   <meta name="keywords" content="blog,life clips,personal">
 
   <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
-<meta name="twitter:description" content="La vie est belle! Profitez bien!"/>
+<meta name="twitter:description" content="La vie est belle! Profitez bien!Let&#39;s think outside the box!"/>
 
   <meta property="og:title" content="404 Page not found" />
-<meta property="og:description" content="La vie est belle! Profitez bien!" />
+<meta property="og:description" content="La vie est belle! Profitez bien!Let&#39;s think outside the box!" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://stalowkey888.github.io/404.html" />
 
@@ -66,7 +66,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="https://stalowkey888.github.io">Pipi&#39;s World</a>
+      <a class="navbar-brand" href="https://stalowkey888.github.io">Racoon&#39;s World</a>
     </div>
     
     <div id="huxblog_navbar">
@@ -189,7 +189,7 @@
         <ul class="list-inline text-center"></ul>
 
         <p class="copyright text-muted">
-          Copyright &copy; Pipi&#39;s World 2023  
+          Copyright &copy; Racoon&#39;s World 2023  
           <br>
           Powered by <a href="https://gohugo.io">Hugo</a>
         </p>
