--- a/series/themes-guide/index.html
+++ b/series/themes-guide/index.html
@@ -8,8 +8,8 @@
 
   
     
-  <title>Themes Guide | Pipi&#39;s World</title>
-  <meta name="author" content="Pipi">
+  <title>Themes Guide | Racoon&#39;s World</title>
+  <meta name="author" content="Racoon">
   <meta name="description" content="a series of posts about configuring and using Hugo themes">
   <meta name="keywords" content="blog,life clips,personal">
 
@@ -32,7 +32,7 @@
 
   <script src=/js/lazysizes.min.js></script>
 
-  <link rel="alternate" type="application/rss+xml" href="/series/themes-guide/index.xml" title="Pipi's World" />
+  <link rel="alternate" type="application/rss+xml" href="/series/themes-guide/index.xml" title="Racoon's World" />
   
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -67,7 +67,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="https://stalowkey888.github.io">Pipi&#39;s World</a>
+      <a class="navbar-brand" href="https://stalowkey888.github.io">Racoon&#39;s World</a>
     </div>
     
     <div id="huxblog_navbar">
@@ -199,7 +199,7 @@
         <ul class="list-inline text-center"></ul>
 
         <p class="copyright text-muted">
-          Copyright &copy; Pipi&#39;s World 2023  
+          Copyright &copy; Racoon&#39;s World 2023  
           <br>
           Powered by <a href="https://gohugo.io">Hugo</a>
         </p>
