--- a/404.html
+++ b/404.html
@@ -10,15 +10,15 @@
     
   <title>404 Page not found | Racoon&#39;s World</title>
   <meta name="author" content="Racoon">
-  <meta name="description" content="La vie est belle! Profitez bien!Let&#39;s think outside the box!">
+  <meta name="description" content="Profitez bien!">
   <meta name="keywords" content="blog,life clips,personal">
 
   <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
-<meta name="twitter:description" content="La vie est belle! Profitez bien!Let&#39;s think outside the box!"/>
+<meta name="twitter:description" content="Profitez bien!"/>
 
   <meta property="og:title" content="404 Page not found" />
-<meta property="og:description" content="La vie est belle! Profitez bien!Let&#39;s think outside the box!" />
+<meta property="og:description" content="Profitez bien!" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://stalowkey888.github.io/404.html" />
 
