--- a/404.html
+++ b/404.html
@@ -8,17 +8,17 @@
 
   
     
-  <title>404 Page not found | Racoon&#39;s World</title>
-  <meta name="author" content="Racoon">
-  <meta name="description" content="Profitez bien!">
-  <meta name="keywords" content="blog,life clips,personal">
+  <title>404 Page not found | 日日好日-城市僻靜</title>
+  <meta name="author" content="WJ">
+  <meta name="description" content="好好生活">
+  <meta name="keywords" content="生活紀錄">
 
   <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
-<meta name="twitter:description" content="Profitez bien!"/>
+<meta name="twitter:description" content="好好生活"/>
 
   <meta property="og:title" content="404 Page not found" />
-<meta property="og:description" content="Profitez bien!" />
+<meta property="og:description" content="好好生活" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://stalowkey888.github.io/404.html" />
 
@@ -66,7 +66,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="https://stalowkey888.github.io">Racoon&#39;s World</a>
+      <a class="navbar-brand" href="https://stalowkey888.github.io">日日好日-城市僻靜</a>
     </div>
     
     <div id="huxblog_navbar">
@@ -157,7 +157,7 @@
 
 
 
-<header class="intro-header" style="background-image: url('/img/404-bg.jpg')">
+<header class="intro-header" style="background-image: url('/img/oops.jpg')">
 
   <div class="container">
     <div class="row">
@@ -189,7 +189,7 @@
         <ul class="list-inline text-center"></ul>
 
         <p class="copyright text-muted">
-          Copyright &copy; Racoon&#39;s World 2023  
+          Copyright &copy; 日日好日-城市僻靜 2024  
           <br>
           Powered by <a href="https://gohugo.io">Hugo</a>
         </p>
