--- a/series/index.html
+++ b/series/index.html
@@ -8,17 +8,17 @@
 
   
     
-  <title>Series | Racoon&#39;s World</title>
-  <meta name="author" content="Racoon">
-  <meta name="description" content="Profitez bien!">
-  <meta name="keywords" content="blog,life clips,personal">
+  <title>Series | 日日好日-城市僻靜</title>
+  <meta name="author" content="WJ">
+  <meta name="description" content="好好生活">
+  <meta name="keywords" content="生活紀錄">
 
   <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Series"/>
-<meta name="twitter:description" content="Profitez bien!"/>
+<meta name="twitter:description" content="好好生活"/>
 
   <meta property="og:title" content="Series" />
-<meta property="og:description" content="Profitez bien!" />
+<meta property="og:description" content="好好生活" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://stalowkey888.github.io/series/" />
 
@@ -32,7 +32,7 @@
 
   <script src=/js/lazysizes.min.js></script>
 
-  <link rel="alternate" type="application/rss+xml" href="/series/index.xml" title="Racoon's World" />
+  <link rel="alternate" type="application/rss+xml" href="/series/index.xml" title="日日好日-城市僻靜" />
   
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -67,7 +67,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="https://stalowkey888.github.io">Racoon&#39;s World</a>
+      <a class="navbar-brand" href="https://stalowkey888.github.io">日日好日-城市僻靜</a>
     </div>
     
     <div id="huxblog_navbar">
@@ -213,7 +213,7 @@
         <ul class="list-inline text-center"></ul>
 
         <p class="copyright text-muted">
-          Copyright &copy; Racoon&#39;s World 2023  
+          Copyright &copy; 日日好日-城市僻靜 2024  
           <br>
           Powered by <a href="https://gohugo.io">Hugo</a>
         </p>
