--- a/about/index.html
+++ b/about/index.html
@@ -193,11 +193,7 @@
  
   <p>WJ was born in 1998, a INFP. Currently based in Taipei, Taiwan.</p>
 <p>WJ有廣泛的興趣，擁有各種鬼靈精怪、天馬行空的想法。</p>
-<p>最近大學剛畢業，正在Gap year臣服宇宙的流動、體驗各種可能性。</p>
-<p>也經營了蝦皮賣場流動二手書。</p>
-<blockquote>
-<p>世界是我的遊樂園！我要創造出我想要的，一個充滿愛與美好的世界！</p>
-</blockquote>
+<p>最近也經營了蝦皮賣場流動二手書。</p>
 
 </div>
 
